remove takeoff endpoint
